spacing and alignment issues in get started

--- a/themes/gauge_theme/static/css/getting_started.css
+++ b/themes/gauge_theme/static/css/getting_started.css
@@ -346,7 +346,7 @@
     background-color: #ffcc00;
     width: max-content;
     border-radius: 25px;
-    padding: 5px 14px;
+    padding: 7px 14px;
     box-sizing: border-box;
     margin: 30px 0px;
 }
@@ -410,7 +410,8 @@
     width: 20px;
     margin-right: 5px;
     position: relative;
-    top: 4px;
+    top: 3px;
+    margin-left:10px;
 }
 
 h3:has(.alternate-methods) {
