--- a/themes/gauge_theme/static/css/overview.css
+++ b/themes/gauge_theme/static/css/overview.css
@@ -4,7 +4,7 @@
 }
 
 .highlighted-syntax {
-    background-color: #eeeeee;
+    background-color: #e4e2e2;
     border-radius: 4px;
     padding: 3px 12px;
     font-family: 'SourceCodePro-Medium';
